--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,9 @@ files = [
 testpaths = [
     "tests",
 ]
+pythonpath = [
+  "."
+]
 markers = [
 "slow: marks tests as slow (deselect with '-m \"not slow\"')",
 ]
